Updates from Overleaf

--- a/IPS/IronPython1.tex
+++ b/IPS/IronPython1.tex
@@ -1,7 +1,9 @@
 # Python Script, API Version = V20 Beta
 # Insert From File
 importOptions = ImportOptions.Create()
-DocumentInsert.Execute(r"C:\Users\dhruv\Downloads\naca24012_closededge_spaceclaim-corrected.txt", importOptions, GetMaps("08867389"))
+DocumentInsert.Execute(r"$FILEPATH$
+\naca24012_closededge_spaceclaim-corrected.txt", importOptions, 
+GetMaps("08867389"))
 # EndBlock
 
 #Parametric Variables
